--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create new account</title>
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>TabPay</title>
+    {% endif %}
+    <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
+    <link rel="stylesheet" href="../static/css/styles.css" />
+  </head>
+  <body>
     {% block content %} {% endblock %}
-</body>
+  </body>
 </html>
