--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,9 +7,6 @@
     <title>{{ title }}</title>
     {% else %}
     <title>TabPay</title>
-
-    <link rel="stylesheet" href="../static/css/styles.css">
-
     {% endif %}
 
     <link
@@ -18,8 +15,8 @@
     />
     <!-- Google Font: Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Bootstrap Icons CDN -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
@@ -48,9 +45,9 @@
          
               
             </a>
-            <a href="#"><i class="bi bi-currency-exchange"></i> Contribute</a>
+            <a href="{{url_for('main.manage_contribution')}}"><i class="bi bi-currency-exchange"></i> Contribute</a>
             <a href="#"><i class="bi bi-house-fill"></i> Host</a>
-            <a href="#"><i class="bi bi-people-fill"></i> Committee</a>
+            <!-- <a href="#"><i class="bi bi-people-fill"></i> Committee</a> -->
             <a href="#"><i class="bi bi-bar-chart-fill"></i> Reports</a>
 
             <!-- Bottom of the Sidebar -->
