--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,21 +1,34 @@
-{% extends "base.html" %}  
-{% block content %}  
-<div class="contmage">  
-    <div class="left">  
-        <img src="../static/images/image1.png" alt="Placeholder" class="object-cover h-full w-full">  
-    </div>  
-    <div class="form-section">  
-        <div class="text-center">  
-            <h1 class="custom-heading">Forgot Password</h1>  
-            <h2 class="custom-subheading">New Password</h2>  
-        </div>  
-        
-        <hr class="divider">  
-        <label for="email" class="custom-label">Please enter Email</label>  
-        <input type="email" id="email" class="custom-input" placeholder="hello@reallygreatsite.com">
-        <div class="btn">  
-        <button class="custom-button">SEND</button>
-    </div>  
-    </div>  
-</div>  
+{% extends "auth.html" %} {% block content %}
+<div class="contmage">
+  <div class="left">
+    <img
+      src="../static/images/image1.png"
+      alt="Placeholder"
+      class="object-cover h-full w-full"
+    />
+  </div>
+  <div class="form-section">
+    <div class="tabpay-logo m-2">
+      <a href="{{url_for('main.home')}}"
+        ><img src="../static/images/logo.png" alt=""
+      /></a>
+    </div>
+    <div class="text-center">
+      <h1 class="custom-heading">Forgot Password</h1>
+      <h2 class="custom-subheading">New Password</h2>
+    </div>
+
+    <hr class="divider" />
+    <label for="email" class="custom-label">Please enter Email</label>
+    <input
+      type="email"
+      id="email"
+      class="custom-input"
+      placeholder="hello@reallygreatsite.com"
+    />
+    <div class="btn">
+      <button class="custom-button">SEND</button>
+    </div>
+  </div>
+</div>
 {% endblock %}
