--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,214 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>TabPay | Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+      <div class="container-fluid m-1">
+        <a class="navbar-brand ms-5" href="#"
+          ><img src="../static/images/logo.png" alt="TabPay Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <div class="d-flex" style="margin-right: 550px">
+              <li class="nav-item" style="margin-right: 100px">
+                <a
+                  class="nav-link"
+                  href="#"
+                  style="color: black; font-weight: bold"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="#"
+                  style="color: black; font-weight: bold"
+                  >Press</a
+                >
+              </li>
+            </div>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('main.login')}}">
+                <button
+                  class="btn btn-danger"
+                  style="
+                    border-radius: 20px;
+                    font-weight: bold;
+                    background-color: rgb(192, 14, 14);
+                    color: white;
+                  "
+                >
+                  Login
+                </button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="index-container">
+      <div class="row d-flex">
+        <div class="col-md-8">
+          <div class="container header-content mt-3 ms-5">
+            <h1
+              class=""
+              style="
+                font-weight: 900;
+                font-size: 45px;
+                color: rgba(16, 169, 2, 0.719);
+              "
+            >
+              Empower Your Community: <br />
+              Contribute, Host & Connect <br />
+              with Ease
+            </h1>
+            <p class="mt-4 mb-4">
+              Welcome to TabPay, a revolutionary digital platform <br />
+              designed to empower your community by facilitating <br />
+              contributions, hosting management, and connection- <br />
+              building.Our mission is to provide a seamless experience <br />
+              for community leaders, members and contributors alike.
+            </p>
+            <a href="{{url_for('main.register')}}">
+              <button
+                class="btn"
+                style="
+                  border-radius: 20px;
+                  font-weight: bold;
+                  background-color: rgb(192, 14, 14);
+                  color: white;
+                "
+              >
+                Register
+              </button></a
+            >
+          </div>
+        </div>
+        <div class="col-md-4 container">Cartoons</div>
+      </div>
+      <div class="info-container p-3 ms-5 mt-3">
+        <div class="row d-flex">
+          <div
+            class="col-md-4 d-flex"
+            style="
+              border: 3px solid black;
+              border-radius: 30px;
+              max-width: 350px;
+            "
+          >
+            <div class="p-2">
+              <h5 style="font-weight: 600; font-size: large">
+                Contribution System
+              </h5>
+              <p style="font-size: 14px" class="p-1">
+                Easily track and manage contributions from members, block
+                leaders, and committee members.
+              </p>
+              <a href="#">
+                <i
+                  class="bi bi-chevron-right p-1"
+                  style="border: 2px solid black; border-radius: 16px"
+                ></i
+              ></a>
+            </div>
+            <img
+              src="placeholder.png"
+              alt="Contribution System"
+              class="feature-icon"
+            />
+          </div>
+          <div
+            class="col-md-4 d-flex"
+            style="
+              border: 3px solid black;
+              border-radius: 30px;
+              max-width: 350px;
+            "
+          >
+            <div class="p-2">
+              <h5 style="font-weight: 600; font-size: large">
+                Hosting Management
+              </h5>
+              <p style="font-size: 14px">
+                Schedule and manage hosting duties among blocks with ease,
+                ensuring fair distribution of responsibilities.
+              </p>
+              <a href="#">
+                <i
+                  class="bi bi-chevron-right p-1"
+                  style="border: 2px solid black; border-radius: 16px"
+                ></i
+              ></a>
+            </div>
+            <img
+              src="placeholder.png"
+              alt="Contribution System"
+              class="feature-icon"
+            />
+          </div>
+          <div
+            class="col-md-4 d-flex"
+            style="
+              border: 3px solid black;
+              border-radius: 30px;
+              max-width: 350px;
+            "
+          >
+            <div class="p-2">
+              <h5 style="font-weight: 600; font-size: large">
+                Reporting & Analytics
+              </h5>
+              <p style="font-size: 14px" class="mt-1">
+                Generate detailed reports on contribution data, block
+                performance metrics, and more.
+              </p>
+              <a href="#">
+                <i
+                  class="bi bi-chevron-right p-1"
+                  style="border: 2px solid black; border-radius: 16px"
+                ></i
+              ></a>
+            </div>
+            <img
+              src="placeholder.png"
+              alt="Contribution System"
+              class="feature-icon"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
