--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
+{% extends 'auth.html' %} {% block content %}
 <body class="my-body">
-    <div class="login-container flex flex-col md:flex-row w-full h-full">
-        <div class="my-image-section w-full md:w-1/2 h-64 md:h-auto"></div>
-        <div class="form-section-area w-full md:w-1/2 flex flex-col items-center justify-center p-6">
-            <h1 class="hi-login">Login</h1>
-            <p class="my-sign-in">Sign in to continue</p>
-            <hr class="login-hr w-8/4">
-            <label for="email" class="email-label">Please enter Email</label>
-            <input type="email" id="email" placeholder="hello@reallygreatsite.com" required class="rop-input">
-            <label for="password" class="password-center">Please enter password</label>
-            <input type="password" id="password" placeholder="********" required class="rop-input">
-            <button type="submit" class="login-button">LOGIN</button>
-        </div>
+  <div class="login-container flex flex-col md:flex-row w-full h-full">
+    <div class="my-image-section w-full md:w-1/2 h-64 md:h-auto"></div>
+    <div
+      class="form-section-area w-full md:w-1/2 flex flex-col items-center justify-center p-6"
+    >
+      <div class="tabpay-logo m-2">
+        <a href="{{url_for('main.home')}}"
+          ><img src="../static/images/logo.png" alt=""
+        /></a>
+      </div>
+      <h1 class="hi-login">Login</h1>
+      <p class="my-sign-in">Sign in to continue</p>
+      <hr class="login-hr w-8/4" />
+      <label for="email" class="email-label">Please enter Email</label>
+      <input
+        type="email"
+        id="email"
+        placeholder="hello@reallygreatsite.com"
+        required
+        class="rop-input"
+      />
+      <label for="password" class="password-center"
+        >Please enter password</label
+      >
+      <input
+        type="password"
+        id="password"
+        placeholder="********"
+        required
+        class="rop-input"
+      />
+      <button type="submit" class="login-button">LOGIN</button>
     </div>
+  </div>
+  {% endblock %}
 </body>
-</html>
