--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     {% if title != 'TabPay | Home' %}
-    <div class="sidebar-h1-profile-dashboard">
+    <div class="sidebar-head-section">
       <div class="row">
         <div class="col-lg-2">
           <!-- Sidebar -->
@@ -58,7 +58,7 @@
             </a>
 
             <a
-              href="#"
+              href="{{url_for('main.host')}}"
               class="{% if request.endpoint == 'main.host' %}active{% endif %}"
             >
               <i class="bi bi-house-fill"></i> Host
@@ -66,15 +66,12 @@
 
             <!-- <a href="#"><i class="bi bi-people-fill"></i> Committee</a> -->
 
-            <a href="{{url_for('main.block_reports')}}"><i class="bi bi-bar-chart-fill"></i> Reports</a>
-
             <a
               href="{{ url_for('main.block_reports')}}"
               class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
             >
               <i class="bi bi-bar-chart-fill"></i> Reports
             </a>
-
 
             <!-- Bottom of the Sidebar -->
             <div class="sidebar-bottom mt-auto">
@@ -96,7 +93,9 @@
         <div class="col-lg-10">
           <div class="row d-flex justify-content-between p-2">
             <div class="col-lg-6 ms-3">
-              <h1 class="dashboard-h1 ms-3">{% block heading %}{% endblock %}</h1>
+              <h1 class="dashboard-h1 ms-2">
+                {% block heading %}{% endblock %}
+              </h1>
             </div>
             <div class="col-lg-4">
               <!-- Profile section -->
