--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,15 +16,66 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <!-- Google Font: Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        font-family: "Montserrat", sans-serif;
+        font-family: "Montserrat";
+      }
+      .feature-card {
+        position: relative; /* Needed for absolute positioning of the icon */
+        text-align: left; /* Text aligned to the left */
+        padding: 20px;
+        padding-right: 80px; /* Additional padding to accommodate the icon */
+        margin: 10px;
+
+        border-radius: 30px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: 4px solid rgb(9, 36, 18);
+        max-width: 350px;
+      }
+
+      .feature-icon {
+        position: absolute; /* Absolute position */
+        top: 50%; /* Center vertically */
+        right: -50px; /* Partially outside the right boundary */
+        transform: translateY(-50%); /* Center align vertically */
+        height: 150px; /* Fixed height */
+        width: auto; /* Maintain aspect ratio */
+        z-index: 10; /* Ensure it's above other elements */
+      }
+
+      .feature-title {
+        font-size: 20px;
+        color: #0d2d08;
+        margin-bottom: 10px;
+        font-weight: bold;
+      }
+
+      .feature-description {
+        font-size: 14px;
+        color: #0d2d08;
+      }
+      .arrow {
+        border: 3px solid black;
+        border-radius: 15px;
+        height: 30px;
+        width: 30px;
+        padding: 2px;
+      }
+      .arrow i {
+        color: black;
       }
     </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <div class="container-fluid m-1">
+      <div class="container">
         <a class="navbar-brand ms-5" href="#"
           ><img src="../static/images/logo.png" alt="TabPay Logo"
         /></a>
@@ -41,12 +92,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <div class="d-flex" style="margin-right: 550px">
+            <div class="d-flex" style="margin-right: 500px">
               <li class="nav-item" style="margin-right: 100px">
                 <a
                   class="nav-link"
                   href="#"
-                  style="color: black; font-weight: bold"
+                  style="color: black; font-weight: bold; font-size: 24px"
                   >About</a
                 >
               </li>
@@ -54,7 +105,7 @@
                 <a
                   class="nav-link"
                   href="#"
-                  style="color: black; font-weight: bold"
+                  style="color: black; font-weight: bold; font-size: 24px"
                   >Press</a
                 >
               </li>
@@ -78,23 +129,28 @@
         </div>
       </div>
     </nav>
-    <div class="index-container">
+    <div class="container">
       <div class="row d-flex">
         <div class="col-md-8">
-          <div class="container header-content mt-3 ms-5">
+          <div class="container header-content mt-3">
             <h1
               class=""
               style="
+                font-family: Roboto, sans-serif;
                 font-weight: 900;
-                font-size: 45px;
-                color: rgba(16, 169, 2, 0.719);
+                font-size: 50px;
+                line-height: 50px;
+                color: rgba(47, 175, 35, 0.923);
               "
             >
               Empower Your Community: <br />
               Contribute, Host & Connect <br />
               with Ease
             </h1>
-            <p class="mt-4 mb-4">
+            <p
+              class="mt-5 mb-5"
+              style="color: #122010; font-weight: 500; letter-spacing: 3px"
+            >
               Welcome to TabPay, a revolutionary digital platform <br />
               designed to empower your community by facilitating <br />
               contributions, hosting management, and connection- <br />
@@ -116,96 +172,67 @@
             >
           </div>
         </div>
-        <div class="col-md-4 container">Cartoons</div>
+        <div class="col-md-4 container mt-3">
+          <img
+            src="../static/images/index_image(1).png"
+            alt=""
+            style="height: 250px"
+          />
+        </div>
       </div>
-      <div class="info-container p-3 ms-5 mt-3">
-        <div class="row d-flex">
-          <div
-            class="col-md-4 d-flex"
-            style="
-              border: 3px solid black;
-              border-radius: 30px;
-              max-width: 350px;
-            "
-          >
-            <div class="p-2">
-              <h5 style="font-weight: 600; font-size: large">
-                Contribution System
-              </h5>
-              <p style="font-size: 14px" class="p-1">
+
+      <div class="container mt-4">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="feature-card">
+              <img
+                src="../static/images/index_image(2).png"
+                alt="Contribution Icon"
+                class="feature-icon"
+              />
+              <div class="feature-title">Contribution System</div>
+              <div class="feature-description">
                 Easily track and manage contributions from members, block
                 leaders, and committee members.
-              </p>
-              <a href="#">
-                <i
-                  class="bi bi-chevron-right p-1"
-                  style="border: 2px solid black; border-radius: 16px"
-                ></i
-              ></a>
+              </div>
+              <div class="arrow">
+                <a href="#"> <i class="bi bi-chevron-right p-1"></i></a>
+              </div>
             </div>
-            <img
-              src="placeholder.png"
-              alt="Contribution System"
-              class="feature-icon"
-            />
           </div>
-          <div
-            class="col-md-4 d-flex"
-            style="
-              border: 3px solid black;
-              border-radius: 30px;
-              max-width: 350px;
-            "
-          >
-            <div class="p-2">
-              <h5 style="font-weight: 600; font-size: large">
-                Hosting Management
-              </h5>
-              <p style="font-size: 14px">
+          <div class="col-md-4">
+            <div class="feature-card">
+              <img
+                src="../static/images/index_image(3).png"
+                alt="Hosting Icon"
+                class="feature-icon"
+              />
+              <div class="feature-title">Hosting Management</div>
+              <div class="feature-description">
                 Schedule and manage hosting duties among blocks with ease,
                 ensuring fair distribution of responsibilities.
-              </p>
-              <a href="#">
-                <i
-                  class="bi bi-chevron-right p-1"
-                  style="border: 2px solid black; border-radius: 16px"
-                ></i
-              ></a>
+              </div>
+              <div class="arrow">
+                <a href="#"> <i class="bi bi-chevron-right p-1"></i></a>
+              </div>
             </div>
-            <img
-              src="placeholder.png"
-              alt="Contribution System"
-              class="feature-icon"
-            />
           </div>
-          <div
-            class="col-md-4 d-flex"
-            style="
-              border: 3px solid black;
-              border-radius: 30px;
-              max-width: 350px;
-            "
-          >
-            <div class="p-2">
-              <h5 style="font-weight: 600; font-size: large">
-                Reporting & Analytics
-              </h5>
-              <p style="font-size: 14px" class="mt-1">
+          <div class="col-md-4">
+            <div class="feature-card">
+              <img
+                src="../static/images/index_image(4).png"
+                alt="Reporting Icon"
+                class="feature-icon"
+              />
+              <div class="feature-title">Reporting & Analytics</div>
+              <div class="feature-description mt-2 mb-3">
                 Generate detailed reports on contribution data, block
                 performance metrics, and more.
-              </p>
-              <a href="#">
-                <i
-                  class="bi bi-chevron-right p-1"
-                  style="border: 2px solid black; border-radius: 16px"
-                ></i
-              ></a>
+              </div>
+              <div class="arrow">
+                <a href="#"> <i class="bi bi-chevron-right p-1"></i></a>
+              </div>
             </div>
-            <img
-              src="placeholder.png"
-              alt="Contribution System"
-              class="feature-icon"
-            />
           </div>
         </div>
       </div>
