--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,38 +1,37 @@
-{% extends 'auth.html' %} {% block content %}
-<body class="my-body">
-  <div class="login-container flex flex-col md:flex-row w-full h-full">
-    <div class="my-image-section w-full md:w-1/2 h-64 md:h-auto"></div>
-    <div
-      class="form-section-area w-full md:w-1/2 flex flex-col items-center justify-center p-6"
-    >
-      <div class="tabpay-logo m-2">
-        <a href="{{url_for('main.home')}}"
-          ><img src="../static/images/logo.png" alt=""
-        /></a>
-      </div>
-      <h1 class="hi-login">Login</h1>
-      <p class="my-sign-in">Sign in to continue</p>
-      <hr class="login-hr w-8/4" />
-      <label for="email" class="email-label">Please enter Email</label>
-      <input
-        type="email"
-        id="email"
-        placeholder="hello@reallygreatsite.com"
-        required
-        class="rop-input"
-      />
-      <label for="password" class="password-center"
-        >Please enter password</label
-      >
-      <input
-        type="password"
-        id="password"
-        placeholder="********"
-        required
-        class="rop-input"
-      />
-      <button type="submit" class="login-button">LOGIN</button>
-    </div>
-  </div>
-  {% endblock %}
-</body>
+{% extends 'auth.html' %}
+
+{% block content %}
+<main class="my-body">  
+  <div class="login-container d-flex w-100 h-100 flex-column flex-md-row">  
+
+    <!-- Left Image Section (100% height) -->  
+    <div class="col-md-6 image-section p-0 d-flex align-items-center">  
+      <div class="my-image-section w-100 h-100">  
+        <img src="{{ url_for('static', filename='images/tabpay.png') }}" alt="Image description" class="img-fluid h-100">  
+      </div>  
+    </div>  
+
+    <!-- Right Form Section (50% width) -->  
+    <div class="col-md-6 d-flex flex-column align-items-center justify-content-center form-section-area">  
+      <h1 class="hi-login text-green-600">Login</h1>  
+      <p class="my-sign-in text-green-600">Sign in to continue</p>  
+      <hr class="login-hr">  
+
+      <!-- Login Form -->  
+      <form>  
+        <div class="form-group mb-3">  
+          <label for="email" class="email-label">Please enter Email</label>  
+          <input type="email" id="email" placeholder="hello@reallygreatsite.com" required class="rop-input form-control border border-gray-300 p-2 rounded" />  
+        </div>  
+        <div class="form-group mb-3">  
+          <label for="password" class="password-center">Please enter password</label>  
+          <input type="password" id="password" placeholder="****" required class="rop-input form-control border border-gray-300 p-2 rounded" />  
+        </div>  
+        <button type="submit" class="btn login-button w-100 bg-green-600 text-white p-2 rounded">LOGIN</button>  
+      </form>  
+
+    </div>  
+
+  </div>  
+</main>  
+{% endblock %}
