--- a/app/templates/manage_contribution.html
+++ b/app/templates/manage_contribution.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block heading %}Manage Contribution {% endblock %}
 {% block content %}
 <!-- Dashboard Content -->
-<div class="dashboard-content">
+<div class="dashboard">
   <div class="container">
     <p class="contribution">
       Initiate an M-Pesa push notification to facilitate member contributions.
@@ -9,7 +9,7 @@
       reminder messages to members who have not yet made their contributions and
       generate a payment link where necessary.
     </p>
-    <div class="settings-container">
+    <div class="dashboard-content">
       <!-- Tab Navigation -->
       <ul class="nav nav-tabs p-3">
         <li class="nav-item">
