--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -2,7 +2,7 @@
 endblock %} {% block content %}
 
 <!-- Dashboard Content -->
-<div class="dashboard-content">
+<div class="dashboard mt-2">
   <div class="container">
     <div class="dashboard-paragraph">
       <p class="mb-4 fs-6">
@@ -13,7 +13,7 @@ endblock %} {% block content %}
       </p>
     </div>
 
-    <div class="settings-container">
+    <div class="dashboard-content">
       <!-- Tab Navigation -->
       <ul class="nav nav-tabs p-3">
         <li class="nav-item">
