--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} {% block heading %} Welcome back,
-<span class="#">Patrick Cheruiyot</span>{% endblock %} {% block content %}
+{% extends "base.html" %} {% block heading %} Welcome back, Patrick Cheruiyot{%
+endblock %} {% block content %}
 <main class="temp-5-body">
   <!-- Dashboard Content -->
-  <div class="dashboard-content">
+  <div class="dashboard">
     <div class="container">
       <div class="dashboard-paragraph">
         <p class="mb-4 fs-4">
