--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,110 +13,149 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Google Font: Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <!-- Bootstrap Icons CDN -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../static/css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style></style>
   </head>
   <body>
-    {% if title != 'TabPay | Home' %}
-    <div class="sidebar-head-section">
-      <div class="row">
-        <div class="col-lg-2">
-          <!-- Sidebar -->
-          <div class="glass-sidebar d-flex flex-column">
-            <!-- TabPay Logo -->
-            <div class="tabpay-logo m-2">
-              <img src="../static/images/logo.png" alt="" />
-            </div>
+    <!-- Mobile Navbar and Profile Section -->
+    <div class="container-fluid d-md-none mobile-nav">
+      <a class="navbar-brand logo" href="#">
+        <img src="../static/images/logo.png" alt="TabPay Logo" />
+      </a>
+      <div class="profile-info">
+        <span><i class="bi bi-chevron-down me-2"></i>Cheruiyot </span>
+        <img
+          src="../static/images/profile_image.png"
+          alt="Profile Picture"
+          class="rounded-circle"
+        />
+      </div>
+    </div>
 
-            <a
-              href="{{url_for('main.dashboard_stats')}}"
-              style="background-color: {% if 'Dashboard' in title %} rgb(3, 185, 3) {% endif %}; 
+    <!-- Static navigation for small screens -->
+    <div class="container-fluid d-md-none mobile-nav-links">
+      <a
+        href="{{ url_for('main.dashboard_stats') }}"
+        class="{% if request.endpoint == 'main.dashboard_stats' %}active{% endif %}"
+        >Dashboard</a
+      >
+      <a
+        href="{{ url_for('main.manage_contribution') }}"
+        class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
+        >Contribute</a
+      >
+      <a
+        href="{{ url_for('main.host') }}"
+        class="{% if request.endpoint == 'main.host' %}active{% endif %}"
+        >Host</a
+      >
+      <a
+        href="{{ url_for('main.block_reports') }}"
+        class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
+        >Reports</a
+      >
+    </div>
+
+    <!-- Main Content Area -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="logo-sidebar-section">
+            <!-- Sidebar for larger screens -->
+            <div class="glass-sidebar d-none d-md-block d-flex">
+              <!-- Sidebar contents -->
+              <div class="tabpay-logo mb-2">
+                <img src="../static/images/logo.png" alt="TabPay Logo" />
+              </div>
+
+              <a
+                href="{{url_for('main.dashboard_stats')}}"
+                style="background-color: {% if 'Dashboard' in title %} rgb(3, 185, 3) {% endif %}; 
                    border-radius: 5px; 
                    color: white;"
-            >
-              <i class="bi bi-grid-fill"></i> Dashboard
-            </a>
-
-            <!-- Navigation Links -->
-            <a
-              href="{{ url_for('main.manage_contribution') }}"
-              class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
-            >
-              <i class="bi bi-currency-exchange"></i> Contribute
-            </a>
-
-            <a
-              href="{{url_for('main.host')}}"
-              class="{% if request.endpoint == 'main.host' %}active{% endif %}"
-            >
-              <i class="bi bi-house-fill"></i> Host
-            </a>
-
-            <!-- <a href="#"><i class="bi bi-people-fill"></i> Committee</a> -->
-
-            <a
-              href="{{ url_for('main.block_reports')}}"
-              class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
-            >
-              <i class="bi bi-bar-chart-fill"></i> Reports
-            </a>
-
-            <!-- Bottom of the Sidebar -->
-            <div class="sidebar-bottom mt-auto">
-              <a
-                href="{{ url_for('main.dashboard_settings') }}"
-                class="{% if request.endpoint == 'main.dashboard_settings' %}active{% endif %}"
               >
-                <i class="bi bi-gear-fill"></i> Settings
+                <i class="bi bi-grid-fill"></i> Dashboard
               </a>
-
-              <a href="{{ url_for('main.home') }}">
-                <i class="bi bi-box-arrow-left"></i> Logout
-              </a>
+              <a
+                href="{{ url_for('main.manage_contribution') }}"
+                class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
+                ><i class="bi bi-currency-exchange"></i> Contribute</a
+              >
+              <a
+                href="{{ url_for('main.host') }}"
+                class="{% if request.endpoint == 'main.host' %}active{% endif %}"
+                ><i class="bi bi-house-fill"></i> Host</a
+              >
+              <a
+                href="{{ url_for('main.block_reports') }}"
+                class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
+                ><i class="bi bi-bar-chart-fill"></i> Reports</a
+              >
+              <div class="sidebar-bottom mt-auto">
+                <a
+                  href="{{ url_for('main.dashboard_settings') }}"
+                  class="{% if request.endpoint == 'main.dashboard_settings' %}active{% endif %}"
+                  ><i class="bi bi-gear-fill"></i> Settings</a
+                >
+                <a href="{{ url_for('main.home') }}"
+                  ><i class="bi bi-box-arrow-left"></i> Logout</a
+                >
+              </div>
             </div>
-
             <!-- Close Sidebar -->
           </div>
         </div>
-        <div class="col-lg-10">
-          <div class="row d-flex justify-content-between p-2">
-            <div class="col-lg-6 ms-3">
-              <h1 class="dashboard-h1 ms-2">
-                {% block heading %}{% endblock %}
-              </h1>
-            </div>
-            <div class="col-lg-4">
-              <!-- Profile section -->
-              <div class="profile-area">
-                <i class="bi bi-search me-2"></i>
-                <i class="bi bi-bell"></i>
-                <img
-                  src="../static/images/profile_image.png"
-                  alt="Profile Picture"
-                />
-                <span>Cheruiyot</span>
-                <i class="bi bi-chevron-down"></i>
+
+        <div class="col-md-10">
+          <div class="header-profile-body mt-3">
+            <div class="row d-flex justify-content-between">
+              <div class="col-md-6">
+                <h1 class="dashboard-h1 ms-2">
+                  {% block heading %}{% endblock %}
+                </h1>
+              </div>
+              <div class="col-md-4">
+                <!-- Profile section -->
+                <div class="profile-area">
+                  <i class="bi bi-search me-2"></i>
+                  <i class="bi bi-bell"></i>
+                  <img
+                    src="../static/images/profile_image.png"
+                    alt="Profile Picture"
+                  />
+                  <span>Cheruiyot</span>
+                  <i class="bi bi-chevron-down"></i>
+                </div>
               </div>
             </div>
+            <div>{% block content %}{% endblock %}</div>
           </div>
         </div>
       </div>
     </div>
-    {% endif %} {% block content %} {% endblock %}
-    <!-- Bootstrap JS & Icons -->
+
+    <!-- Footer for small screens -->
+    <div class="container-fluid d-md-none mobile-footer">
+      <i class="bi bi-bell">Alerts</i>
+      <div class="icon-container">
+        <span>Search</span><i class="bi bi-search ms-2"></i>
+      </div>
+      <a href="{{ url_for('main.dashboard_settings') }}" class="settings-link"
+        ><i class="bi bi-gear-fill"></i> Settings</a
+      >
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.js"></script>
   </body>
 </html>
