--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="container">
-        <a class="navbar-brand ms-5" href="#"
+        <a class="navbar-brand ms-3" style="margin-right: 300px" href="#"
           ><img src="../static/images/logo.png" alt="TabPay Logo"
         /></a>
         <button
@@ -91,8 +91,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <div class="d-flex" style="margin-right: 500px">
+          <ul class="navbar-nav">
+            <div class="d-flex" style="margin-right: 350px">
               <li class="nav-item" style="margin-right: 100px">
                 <a
                   class="nav-link"
